# notebot

./: ARCHITECTURE.md  Cargo.toml  Dockerfile  README.md  compose.yaml
.github/workflows/: ci.yml
examples/: echo.rs  greeter.rs
src/: bot.rs  context.rs  error.rs  event.rs  lib.rs
