[package]
name = "notebot"
version = "0.1.0"
edition = "2021"
description = "Misskey bot framework built on notecli"
license = "MIT"
repository = "https://github.com/hitalin/notebot"

[dependencies]
# semver 未安定のため rev ピン。更新は意図的に rev を進める (ARCHITECTURE.md §10)
notecli = { git = "https://github.com/hitalin/notecli.git", rev = "f1931af84a384c749efa2cd5b9aa478d22d19393" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
dirs = "6"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
